* 틀 제작(event단 작업중)

--- a/src/main/webapp/resources/css/area1_0.css
+++ b/src/main/webapp/resources/css/area1_0.css
@@ -33,4 +33,13 @@
 	position:absolute;
 	width: 50px;
 	height: 80px;
+	
+	background-color: aqua;
+}
+
+#div_area1_0_shop {
+	position:absolute;
+	width: 790px;
+	height: 380px;
+	top: 720px;
 }
