--- a/src/main/webapp/resources/css/culture_wonder.css
+++ b/src/main/webapp/resources/css/culture_wonder.css
@@ -6,13 +6,20 @@
 
 .div_side_area1_0 {
 	width: 100px;
-	height: 130px;
+	height: 140px;
 }
 
 .div_area1_0_side_detail {
 	width: 190px;
 	height: 100px;
 	color: white;
+}
+
+#div_flow_map {
+	position: absolute;
+	top: 80px;
+	width: 790px;
+	height: 592px;
 }
 
 #div_area1_0_flow {
@@ -34,9 +41,7 @@
 #div_area1_0_pin {
 	position:absolute;
 	width: 50px;
-	height: 80px;
-	
-	background-color: aqua;
+	height: 70px;
 }
 
 #div_area1_0_shop {
@@ -56,9 +61,42 @@
 
 #div_shop_name {
 	position: relative;
-	top: 25px;
+	top: 35px;
 	left: 15px;
 	width: 150px;
 	height: 50px;
-	color: white;
+	color: #ffffff;
+}
+
+#div_wonder_logo {
+	position: relative;
+	top: 25px;
+	left: 262px;
+	width: 125px;
+	height: 125px;
+	
+	margin-bottom: 25px;
+}
+
+#div_wonder_name {
+	position: absolute;
+	top: 175px;
+	left: 75px;
+	width: 500px;
+	height: 25px;
+	color: #6b6b6b;
+	text-align: center;
+	font-size: 25px;
+	margin-bottom: 52px;
+}
+
+#div_wonder_flow {
+	position: absolute;
+	top: 252px;
+	left: 75px;
+	width: 500px;
+	height: 20px;
+	text-align: center;
+	font-size: 20px;
+	color: #6b6b6b;
 }
