--- a/src/main/webapp/resources/css/culture_wonder.css
+++ b/src/main/webapp/resources/css/culture_wonder.css
@@ -92,32 +92,47 @@
 #div_wonder_logo {
 	position: relative;
 	top: 25px;
-	left: 262px;
+	left: 470px;
 	width: 125px;
 	height: 125px;
-	
-	margin-bottom: 25px;
 }
 
 #div_wonder_name {
 	position: absolute;
-	top: 175px;
+	top: 50px;
 	left: 75px;
 	width: 500px;
-	height: 25px;
+	height: 30px;
 	color: #6b6b6b;
-	text-align: center;
+	text-align: left;
 	font-size: 25px;
-	margin-bottom: 52px;
 }
 
-#div_wonder_flow {
-	position: absolute;
-	top: 252px;
+#div_wonder_info_img {
+	position: relative;
+	top: 29px;
 	left: 75px;
-	width: 500px;
+	width: 20px;
 	height: 20px;
-	text-align: center;
+}
+
+.div_wonder_img{
+	width: 20px;
+	height: 20px;
+	margin-bottom: 23px;
+}
+
+#div_wonder_info {
+	position: relative;
+	left: 110px;
+}
+
+.div_wonder_info {
+	position: relative;
+	width: 400px;
+	height: 20px;
+	text-align: left;
 	font-size: 20px;
 	color: #6b6b6b;
+	margin-bottom: 24px;
 }
