promotion 페이지 업로드시 새로고침x 원더아리아 로고 고정x

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -183,6 +183,13 @@ body {
     background-size: cover;
 }
 
+#div_promotion_black {
+	position:absolute;
+	width: var(--full-width);
+    height: var(--promotion-height);
+    background-size: cover;
+}
+
 #div_bottom{
 	position:absolute;
 	width: var(--full-width);
