--- a/src/main/webapp/resources/css/culture_wonder.css
+++ b/src/main/webapp/resources/css/culture_wonder.css
@@ -82,11 +82,13 @@
 	font-family:Noto Sans CJK KR Medium;
 }
 
-#mul {
+.mul {
 	position:absolute;
+	right: 10px;
 	left:20px;
 	top:50%;
-	transform: translate(0, -50%)
+	transform: translate(0, -50%);
+	font-size: 24px;
 }
 
 #div_wonder_logo {
