--- a/src/main/webapp/resources/css/event.css
+++ b/src/main/webapp/resources/css/event.css
@@ -94,7 +94,7 @@
 	width: 454px;
 	height: 25px;
 	left: 145px;
-	color: #424f7b;
+	color: #2d4aad;
 	font-weight: 700;
 	font-size: 21px;
 }
@@ -123,7 +123,7 @@
 	position: absolute;
 	width: 900px;
 	height: 890px;
-	top: 150px;
+	top: 40px;
 	left: 45px;
 	background-image: url("../image/main/event_detail_bg.png");
 }
@@ -153,7 +153,7 @@
 	width: 690px;
 	height: 30px;
 	left: 130px;
-	color: #424f7b;
+	color: #2d4aad;
 	font-weight: 700;
 	font-size: 21px;
 }
