--- a/src/main/webapp/resources/css/industry.css
+++ b/src/main/webapp/resources/css/industry.css
@@ -9,7 +9,17 @@
 .div_side_area0 {
 	width: 100px;
 	height: 120px;
-	margin-bottom: 1px;
+}
+
+
+.div_side_area0_ko {
+	width: 100px;
+	height: 105px;
+}
+
+.div_side_area0_en {
+	width: 100px;
+	height: 120px;
 }
 
 .div_area0_side_detail {
@@ -48,12 +58,13 @@
 	font-family:Noto Sans CJK KR Medium;
 }
 
-#mul {
+/* .mul {
 	position:absolute;
 	left:20px;
 	top:50%;
-	transform: translate(0, -50%)
-}
+	transform: translate(0, -50%);
+	font-size: 24px;
+} */
 
 #div_industry_detail {
 	position:absolute;
