--- a/src/main/webapp/resources/css/event.css
+++ b/src/main/webapp/resources/css/event.css
@@ -94,7 +94,7 @@
 	width: 454px;
 	height: 25px;
 	left: 145px;
-	color: #2d4aad;
+	color: #3577e5;
 	font-weight: 700;
 	font-size: 21px;
 }
@@ -153,7 +153,7 @@
 	width: 690px;
 	height: 30px;
 	left: 130px;
-	color: #2d4aad;
+	color: #3577e5;
 	font-weight: 700;
 	font-size: 21px;
 }
