--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -418,3 +418,13 @@ body {
 	top: 40px;
 	right: 40px;
 }
+
+#txt_source{
+	position: absolute;
+	bottom: 95px;
+	left: 10px;
+	width: 1080px;
+	color: #444444;
+	font-size: 10px;
+	display: none;
+}
